--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -80,5 +80,18 @@ nav{
 
 }
 
+.content {
+
+		text-align: center;
+  	font-size: 25px;
+  	font-family: Verdana;
+  	background-color: #9DC183;
+  	padding: 20px;
+  	margin-right: 200px;
+  	margin-left: 200px;
+  	margin-top: 50px;
+
+}
+
 
 
