--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -18,9 +18,9 @@ header {
 
 nav{
 
-			font-family: Verdana;
-			margin: 10px;
-			padding: 5px;
+		font-family: Verdana;
+		margin: 10px;
+		padding: 5px;
 
 }
 
@@ -36,6 +36,7 @@ nav{
 
 .topnav {
   	display: flex;
+  	font-color: #000000;
 
 }
 
@@ -53,7 +54,7 @@ nav{
 
   	border-style: solid;
   	border-color: #597D35;
-		border-radius: 25px;
+	border-radius: 25px;
 
 
   	
@@ -63,10 +64,9 @@ nav{
   	background-color: #C7EA46;
   	font-color: #000000;
   	text-align: center;
-
   	border-style: solid;
   	border-color: #597D35;
-		border-radius: 25px;
+	border-radius: 25px;
 
 }
 
@@ -75,16 +75,29 @@ nav{
   	font-color: #000000;
   	border-style: solid;
   	border-color: #597D35;
-		border-radius: 25px;
+	border-radius: 25px;
 
 }
 
 .content {
 
-		text-align: center;
+	text-align: center;
   	font-size: 25px;
   	font-family: Verdana;
+  	padding: 20px;
+  	margin-right: 200px;
+  	margin-left: 200px;
+  	margin-top: 50px;
+  	font-color: #000000;
   	background-color: #9DC183;
+
+}
+
+.content_services {
+
+	text-align: center;
+  	font-size: 25px;
+  	font-family: Verdana;
   	padding: 20px;
   	margin-right: 200px;
   	margin-left: 200px;
