--- a/HW4stylesheet.css
+++ b/HW4stylesheet.css
@@ -1,31 +1,26 @@
 body {
-
 	background-color: #FF2E2E;
 	color: #FFFF00;
 	padding-left: 20px;
-
+	margin-bottom: 5px;
 }
 
 h1{
-
-	font-size: 50px;
+	font-size: 60px;
 	font-family: "Oswald";
-
+	padding-left: 20px;
 }
 
 h2 {
-
 	font-size: 40px;
 	font-family: "Oswald";
 }
 
 .content {
-
 	font-size: 30px;
 	margin-bottom: -10px;
-	padding: 15px;
+	padding: 20px;
 	font-family: "Roboto Mono";
-
 }
 
 .row {
