--- a/jade_delightstylesheet.css
+++ b/jade_delightstylesheet.css
@@ -1,6 +1,12 @@
+head {
+
+	font-size:  40px;
+}
+
 body {
 	background-color: #9DC183;
 	font-family: 'Irish Grover', cursive;
 	padding-left: 35px;
+	font-size: 20px;
 
 }
