--- a/HW9stylesheet.css
+++ b/HW9stylesheet.css
@@ -19,17 +19,11 @@ body{
 	color: #004EFF;
 }
 
-#string {
-	display: block;
-	font-size: 15px;
-	font-family: 'Cooper Black';
-	color: #FF10F0;
-}
 
 #data {
 	font-family: 'Cooper Black';
 	display: block;
 	font-size: 20px;
-	color: #004EFF;
+	color: #000000;
 }
 
